--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>      
     </div>
     <footer>
-      <a href="https://www.facebook.com/hispaneando"><img src="f.png" width=60px height=60px></a>
+      <a href="https://www.facebook.com/hispaneando"><img src="F.png" width=60px height=60px></a>
     </footer>
   </body>
 </html>
